@@ -102,7 +102,7 @@ public class ConnectedParser
                 }
             }
 
-            MatchBlock[] amatchblock1 = (MatchBlock[])((MatchBlock[])list.toArray(new MatchBlock[list.size()]));
+            MatchBlock[] amatchblock1 = (MatchBlock[]) list.toArray(new MatchBlock[list.size()]);
             return amatchblock1;
         }
     }
@@ -160,7 +160,7 @@ public class ConnectedParser
                 }
 
                 String s1 = astring[i];
-                String[] astring1 = (String[])Arrays.copyOfRange(astring, i + 1, astring.length);
+                String[] astring1 = Arrays.copyOfRange(astring, i + 1, astring.length);
                 Block[] ablock = this.parseBlockPart(s, s1);
 
                 if (ablock == null)
@@ -206,7 +206,7 @@ public class ConnectedParser
         else
         {
             String s = parts[1];
-            return s.length() < 1 ? false : (this.startsWithDigit(s) ? false : !s.contains("="));
+            return s.length() >= 1 && (!this.startsWithDigit(s) && !s.contains("="));
         }
     }
 
@@ -321,7 +321,7 @@ public class ConnectedParser
                             return null;
                         }
 
-                        List<Comparable> list = (List)map.get(s2);
+                        List<Comparable> list = map.get(s2);
 
                         if (list == null)
                         {
@@ -370,7 +370,6 @@ public class ConnectedParser
                         }
                         catch (IllegalArgumentException var18)
                         {
-                            ;
                         }
                     }
 
@@ -384,7 +383,7 @@ public class ConnectedParser
 
                         for (int i1 = 0; i1 < aint1.length; ++i1)
                         {
-                            aint1[i1] = ((Integer)list1.get(i1)).intValue();
+                            aint1[i1] = list1.get(i1).intValue();
                         }
 
                         return aint1;
@@ -444,9 +443,8 @@ public class ConnectedParser
 
     private static Object getValueName(Comparable obj)
     {
-        if (obj instanceof IStringSerializable)
+        if (obj instanceof IStringSerializable istringserializable)
         {
-            IStringSerializable istringserializable = (IStringSerializable)obj;
             return istringserializable.getName();
         }
         else
@@ -483,7 +481,7 @@ public class ConnectedParser
     {
         for (IProperty iproperty : mapPropValues.keySet())
         {
-            List<Comparable> list = (List)mapPropValues.get(iproperty);
+            List<Comparable> list = mapPropValues.get(iproperty);
             Comparable comparable = bs.getValue(iproperty);
 
             if (comparable == null)
@@ -542,7 +540,7 @@ public class ConnectedParser
                 list = list1;
             }
 
-            BiomeGenBase[] abiomegenbase = (BiomeGenBase[])((BiomeGenBase[])list.toArray(new BiomeGenBase[list.size()]));
+            BiomeGenBase[] abiomegenbase = (BiomeGenBase[]) list.toArray(new BiomeGenBase[list.size()]);
             return abiomegenbase;
         }
     }
@@ -661,7 +659,7 @@ public class ConnectedParser
 
             for (int j1 = 0; j1 < aint.length; ++j1)
             {
-                aint[j1] = ((Integer)list.get(j1)).intValue();
+                aint[j1] = list.get(j1).intValue();
             }
 
             return aint;
@@ -759,12 +757,12 @@ public class ConnectedParser
 
     public void dbg(String str)
     {
-        Config.dbg("" + this.context + ": " + str);
+        Config.dbg(this.context + ": " + str);
     }
 
     public void warn(String str)
     {
-        Config.warn("" + this.context + ": " + str);
+        Config.warn(this.context + ": " + str);
     }
 
     public RangeListInt parseRangeListInt(String str)
@@ -967,7 +965,7 @@ public class ConnectedParser
     {
         if (str == null)
         {
-            return (T)null;
+            return null;
         }
         else
         {
@@ -985,7 +983,7 @@ public class ConnectedParser
             }
 
             this.warn("Invalid " + property + ": " + str);
-            return (T)null;
+            return null;
         }
     }
 
@@ -1008,7 +1006,7 @@ public class ConnectedParser
 
                 if (t == null)
                 {
-                    return (T[])errValue;
+                    return errValue;
                 }
 
                 at[i] = t;
@@ -1020,22 +1018,22 @@ public class ConnectedParser
 
     public Enum parseEnum(String str, Enum[] enums, String property)
     {
-        return (Enum)this.parseObject(str, enums, NAME_GETTER_ENUM, property);
+        return this.parseObject(str, enums, NAME_GETTER_ENUM, property);
     }
 
     public Enum[] parseEnums(String str, Enum[] enums, String property, Enum[] errValue)
     {
-        return (Enum[])this.parseObjects(str, enums, NAME_GETTER_ENUM, property, errValue);
+        return this.parseObjects(str, enums, NAME_GETTER_ENUM, property, errValue);
     }
 
     public EnumDyeColor[] parseDyeColors(String str, String property, EnumDyeColor[] errValue)
     {
-        return (EnumDyeColor[])this.parseObjects(str, EnumDyeColor.values(), NAME_GETTER_DYE_COLOR, property, errValue);
+        return this.parseObjects(str, EnumDyeColor.values(), NAME_GETTER_DYE_COLOR, property, errValue);
     }
 
     public Weather[] parseWeather(String str, String property, Weather[] errValue)
     {
-        return (Weather[])this.parseObjects(str, Weather.values(), NAME_GETTER_ENUM, property, errValue);
+        return this.parseObjects(str, Weather.values(), NAME_GETTER_ENUM, property, errValue);
     }
 
     public NbtTagValue parseNbtTagValue(String path, String value)
@@ -1074,7 +1072,7 @@ public class ConnectedParser
             }
             else
             {
-                VillagerProfession[] avillagerprofession = (VillagerProfession[])((VillagerProfession[])list.toArray(new VillagerProfession[list.size()]));
+                VillagerProfession[] avillagerprofession = list.toArray(new VillagerProfession[list.size()]);
                 return avillagerprofession;
             }
         }
@@ -1148,7 +1146,7 @@ public class ConnectedParser
             set.add(Integer.valueOf(j));
         }
 
-        Integer[] ainteger = (Integer[])((Integer[])set.toArray(new Integer[set.size()]));
+        Integer[] ainteger = set.toArray(new Integer[set.size()]);
         int[] aint = new int[ainteger.length];
 
         for (int k = 0; k < aint.length; ++k)
@@ -1257,7 +1255,7 @@ public class ConnectedParser
         {
             String s = astring[i];
             ResourceLocation resourcelocation = new ResourceLocation(s);
-            Item item = (Item)Item.itemRegistry.getObject(resourcelocation);
+            Item item = Item.itemRegistry.getObject(resourcelocation);
 
             if (item == null)
             {
@@ -1273,12 +1271,12 @@ public class ConnectedParser
                 }
                 else
                 {
-                    set.add(new Integer(j));
+                    set.add(Integer.valueOf(j));
                 }
             }
         }
 
-        Integer[] ainteger = (Integer[])((Integer[])set.toArray(new Integer[set.size()]));
+        Integer[] ainteger = set.toArray(new Integer[set.size()]);
         int[] aint = Config.toPrimitive(ainteger);
         return aint;
     }
@@ -1300,11 +1298,11 @@ public class ConnectedParser
             }
             else
             {
-                set.add(new Integer(j));
+                set.add(Integer.valueOf(j));
             }
         }
 
-        Integer[] ainteger = (Integer[])((Integer[])set.toArray(new Integer[set.size()]));
+        Integer[] ainteger = set.toArray(new Integer[set.size()]);
         int[] aint = Config.toPrimitive(ainteger);
         return aint;
     }
