@@ -6,18 +6,18 @@ import net.minecraft.client.Minecraft;
 
 public class FrameEvent
 {
-    private static Map<String, Integer> mapEventFrames = new HashMap();
+    private static final Map<String, Integer> mapEventFrames = new HashMap();
 
     public static boolean isActive(String name, int frameInterval)
     {
         synchronized (mapEventFrames)
         {
             int i = Minecraft.getMinecraft().entityRenderer.frameCount;
-            Integer integer = (Integer)mapEventFrames.get(name);
+            Integer integer = mapEventFrames.get(name);
 
             if (integer == null)
             {
-                integer = new Integer(i);
+                integer = Integer.valueOf(i);
                 mapEventFrames.put(name, integer);
             }
 
@@ -29,7 +29,7 @@ public class FrameEvent
             }
             else
             {
-                mapEventFrames.put(name, new Integer(i));
+                mapEventFrames.put(name, Integer.valueOf(i));
                 return true;
             }
         }
